--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -225,7 +225,7 @@ img {
     backdrop-filter: blur(10px);
     
     flex-direction: column;
-    align-items: center;
+    align-items: left;
     display: none;
     padding: 10px 0;
     z-index: 9999;
@@ -270,4 +270,3 @@ img {
     transform: translateY(0);
   }
 }
-
