--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -206,6 +206,7 @@ img {
 
   .hamburger:hover + .nav-links {
     display: flex;
+    content: center;
   }
 
   .header {
@@ -217,6 +218,7 @@ img {
     top: 100%;
     /* Use left: 50% and transform to center the menu perfectly */
     left: 50%;
+    content: counter(name);
     transform: translateX(-50%); 
     width: 100vw; /* Spans the full width of the mobile screen */
     
